--- a/accounts.properties
+++ b/accounts.properties
@@ -1,3 +1,11 @@
 accounts.msg=Accounts Application
 
 accounts.datasource.username=banking-user
+
+spring.jpa.database=mysql
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://${SQL_HOSTNAME:localhost}:3306/banking
+spring.datasource.username=banking-user
+spring.datasource.password=banking
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.show-sql=true
