--- a/accounts.properties
+++ b/accounts.properties
@@ -9,3 +9,19 @@ spring.datasource.username=banking-user
 spring.datasource.password=banking
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
+server.port=8080
+
+management.endpoints.web.exposure.include=*
+
+eureka.instance.preferIpAddress=true
+eureka.client.registerWithEureka=true
+eureka.client.fetchRegistry=true
+eureka.client.serviceUrl.defaultZone=http://localhost:8070/eureka/
+
+management.info.env.enabled=true
+info.app.name=Accounts Application
+info.app.description=Banking Accounts Application
+info.app.version=1.0.0
+
+endpoints.shutdown.enabled=true
+management.endpoint.shutdown.enabled=true
