--- a/cards.properties
+++ b/cards.properties
@@ -1,3 +1,11 @@
 cards.msg=Cards Application
 
 cards.datasource.username=banking-user
+
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://${SQL_HOSTNAME:localhost}:3306/banking
+spring.datasource.username=banking-user
+spring.datasource.password=banking
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.show-sql=true
+server.port=9000
