--- a/cards.properties
+++ b/cards.properties
@@ -9,3 +9,18 @@ spring.datasource.password=banking
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
 server.port=9000
+
+management.endpoints.web.exposure.include=*
+
+eureka.instance.preferIpAddress=true
+eureka.client.registerWithEureka=true
+eureka.client.fetchRegistry=true
+eureka.client.serviceUrl.defaultZone=http://localhost:8070/eureka/
+
+management.info.env.enabled=true
+info.app.name=Cards Application
+info.app.description=Banking Cards Application
+info.app.version=1.0.0
+
+endpoints.shutdown.enabled=true
+management.endpoint.shutdown.enabled=true
