--- a/accounts.properties
+++ b/accounts.properties
@@ -31,3 +31,7 @@ resilience4j.circuitbreaker.instances.detailsForCustomerSupportApp.minimumNumber
 resilience4j.circuitbreaker.instances.detailsForCustomerSupportApp.failureRateThreshold=50
 resilience4j.circuitbreaker.instances.detailsForCustomerSupportApp.waitDurationInOpenState=30000
 resilience4j.circuitbreaker.instances.detailsForCustomerSupportApp.permittedNumberOfCallsInHalfOpenState=2
+
+resilience4j.retry.configs.default.registerHealthIndicator=true
+resilience4j.retry.instances.retryForCustomerDetailsApp.maxRetryAttempts=3
+resilience4j.retry.instances.retryForCustomerDetailsApp.waitDuration=2000
