--- a/gatewayserver.properties
+++ b/gatewayserver.properties
@@ -12,4 +12,6 @@ info.app.name=Loans Application
 info.app.description=Banking Loans Application
 info.app.version=1.0.0
 
+management.endpoint.gateway.enabled=true
+
 spring.cloud.gateway.discovery.locator.enabled=true
