--- a/gatewayserver.properties
+++ b/gatewayserver.properties
@@ -15,3 +15,4 @@ info.app.version=1.0.0
 management.endpoint.gateway.enabled=true
 
 spring.cloud.gateway.discovery.locator.enabled=true
+spring.cloud.gateway.discovery.locator.lowerCaseServiceId=true
