--- a/gatewayserver.properties
+++ b/gatewayserver.properties
@@ -8,8 +8,8 @@ eureka.client.fetchRegistry=true
 eureka.client.serviceUrl.defaultZone=http://localhost:8070/eureka/
 
 management.info.env.enabled=true
-info.app.name=Loans Application
-info.app.description=Banking Loans Application
+info.app.name=GatewayServer Application
+info.app.description=Banking GatewayServer Application
 info.app.version=1.0.0
 
 management.endpoint.gateway.enabled=true
