--- a/accounts.properties
+++ b/accounts.properties
@@ -35,3 +35,6 @@ resilience4j.circuitbreaker.instances.detailsForCustomerSupportApp.permittedNumb
 resilience4j.retry.configs.default.registerHealthIndicator=true
 resilience4j.retry.instances.retryForCustomerDetailsApp.maxRetryAttempts=3
 resilience4j.retry.instances.retryForCustomerDetailsApp.waitDuration=2000
+
+spring.sleuth.sampler.percentage=1
+spring.zipkin.baseUrl=http://localhost:9411/
