--- a/gatewayserver.properties
+++ b/gatewayserver.properties
@@ -16,3 +16,6 @@ management.endpoint.gateway.enabled=true
 
 spring.cloud.gateway.discovery.locator.enabled=true
 spring.cloud.gateway.discovery.locator.lowerCaseServiceId=true
+
+spring.sleuth.sampler.percentage=1
+spring.zipkin.baseUrl=http://localhost:9411/
